[package]
name = "shadertoy-screensaver"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
glutin = {version="0.31.1", default-features=false, features=["wgl"]}
glutin-winit = {version="0.4.2", default-features=false, features=["wgl"]}
winit = { version = "0.29.2", default-features = false, features = ["rwh_06", "rwh_05"] }
raw-window-handle = "0.5.2"
const-cstr = "0.3.0"
winapi = { version = "0.3.9", features = ["winuser", "impl-default"] }

[build-dependencies]
gl_generator = "0.14"
cfg_aliases = "0.1.1"

[[bin]]
name = "shadertoy"
path = "src/main.rs"